--- a/DiceRoller/MainPage.xaml
+++ b/DiceRoller/MainPage.xaml
@@ -6,7 +6,39 @@
     <ScrollView>
         <VerticalStackLayout
             Spacing="25"
-            Padding="30,0">
+            Padding="30,0"
+            HorizontalOptions="Center" >
+                <Label
+                    Text="ROLADOR DE DADOS"
+                    FontSize="Large"/>
+                <Label
+                    x:Name="ResultLabel"
+                    HorizontalOptions="Center"
+                    Text="6"
+                    FontSize="Header"/>
+
+            <Picker x:Name="SidesPicker"
+                    Title="Select a monkey">
+                <Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>4</x:String>
+                        <x:String>6</x:String>
+                        <x:String>8</x:String>
+                        <x:String>10</x:String>
+                        <x:String>12</x:String>
+                        <x:String>20</x:String>
+                        <x:String>100</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+            </Picker>
+
+            <Button
+                    x:Name="DiceRoller"
+                    WidthRequest="250"
+                    Text="ROLAR O DADO"
+                    Clicked="DiceRoller_Clicked"/>
+
+            
 
         </VerticalStackLayout>
     </ScrollView>
